--- a/azine/azine_main/templates/html/base.html
+++ b/azine/azine_main/templates/html/base.html
@@ -24,6 +24,7 @@
     <li><a class="skip" href="#col3">Skip to main content (Press Enter).</a></li>
 </ul>
 
+<div class="page_bg">
 <div class="page_margins">
     <div class="page">
         <div id="header" role="banner">
@@ -32,44 +33,50 @@
                 <span><a href="#">Login</a> | <a href="#">Contact</a> | <a href="#">Imprint</a></span> 
             </div>
             -->
-            <h1><a href="/"><img src="{{ MEDIA_URL }}azine_main/img/azine-logo-header.png"></a></h1>
-            <!-- begin: main navigation #nav -->
+						<div id="logo">
+            	<h1><a href="/"><img src="{{ MEDIA_URL }}azine_main/img/header-logo.png"></a></h1>
+            </div>
+						<!-- begin: main navigation #nav -->
             <div id="nav-main"  role="navigation">
                 <ul class="nav">
                     <!--<li><a href="/">{% trans "Home" %}</a></li>-->
-                    <li class="active"><a href="{% url job_index %}">Jobs</a></li>
+                    <!--<li class="active"><a href="{% url job_index %}">Jobs</a></li>-->
+										<li><a href="#">About</a></li>
+										<li><a href="#">Help</a></li>
                     {% if not request.user.is_anonymous %}
                     <li><a href="{% url user_detail request.user.username %}">{{ request.user.username }}</a>
                         <ul>
-                            <li><a href="{% url user_profile_change request.user.username %}">{% trans "Edit my profile" %}</a></li>
-                            <li><a href="{% url application_index_for_user request.user.username %}">{% trans "My applications" %}</a></li>
+                            <li><a href="{% url user_profile_change request.user.username %}">{% trans "Edit your profile" %}</a></li>
+                            <li><a href="{% url application_index_for_user request.user.username %}">{% trans "Your applications" %}</a></li>
                             <li><a href="{% url password_change %}">{% trans "Change password" %}</a></li>
                             <li><a href="{% url django.contrib.auth.views.logout_then_login %}">{% trans "Log out" %}</a></li>
                         </ul>
                     </li>
                     {% else %}
-                    <li><a id="signup" href="#">{% trans "Sign up" %}</a>
+                    <li><a id="login" href="{% url login %}">{% trans "Log in" %}</a></li>
+ 										<li><a id="signup" href="{% url signup %}">{% trans "Register" %}</a></li>
                     {% endif %}
                 </ul>
             </div>
             <!-- end: main navigation -->
         </div>
-				{% include "persistent_messages/message/includes/messages.jquery.html" %}
         <!-- begin: main content area #main -->
         <div id="main">
             <!-- begin: #col1 - first float column -->
             <div id="col1" role="complementary">
+<!--
                 <div id="col1_content" class="clearfix">
                     <h2>Some content here</h2>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam malesuada   suscipit pede. Nullam ipsum lacus, varius vel, nonummy in, consequat ut, neque.   </p>
                     <h3>Lorem ipsum ... </h3>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Nullam malesuada   suscipit pede. Nullam ipsum lacus, varius vel, nonummy in, consequat ut, neque.   Vivamus viverra. Duis dolor arcu, lacinia sit amet, sollicitudin sed, aliquet   vel, quam. Pellentesque molestie laoreet tortor. Aenean quam. Pellentesque magna   metus, venenatis sit amet, congue nec, dictum in, est. Aliquam nibh. </p>
                 </div>
+-->
             </div>
             <!-- end: #col1 -->
             <!-- begin: #col2 second float column -->
             <div id="col2" role="complementary">
-                <div id="col2_content" class="clearfix">
+<!--                <div id="col2_content" class="clearfix">
                     <h2>Latest jobs</h2>
                     <table style="width: 100%" cellpadding="0">
                         <tbody>
@@ -105,6 +112,7 @@
                         </tbody>
                     </table>
                 </div>
+-->
             </div>
             <!-- end: #col2 -->
             <!-- begin: #col3 static column -->
@@ -112,11 +120,17 @@
                 <div id="col3_content" class="clearfix">
 
                     <div id="content-main">
-                        <h2>{% block heading %}{% endblock %}</h2>
-                        {% block content %}
-                        {% placeholder "content" %}
-                        {% endblock %}
-                    </div>
+											{% include "persistent_messages/message/includes/messages.jquery.html" %}
+                        <!--<h2>{% block heading %}{% endblock %}</h2>-->
+											{% if request.user.is_authenticated %}
+	                      {% placeholder "content-authenticated" or %}
+	                      	{% placeholder "content" %}
+												{% endplaceholder %}
+											{% else %}
+                      	{% placeholder "content" %}
+											{% endif %}
+	                    {% block content %}{% endblock %}
+											</div>
 
                 </div>
                 <div id="ie_clearing">&nbsp;</div>
@@ -139,6 +153,7 @@
         </div>
         <!-- end: #footer -->
     </div>
+</div>
 </div>
 
 <!-- full skip link functionality in webkit browsers -->
