--- a/azine/user_profiles/templates/user_profiles/logged_out.html
+++ b/azine/user_profiles/templates/user_profiles/logged_out.html
@@ -1,4 +1,4 @@
-{% extends "html/base.html" %}
+{% extends "user_profiles/base.html" %}
 {% load i18n %}
 
 {% block breadcrumbs %}<div class="breadcrumbs"><a href="../">{% trans 'Home' %}</a></div>{% endblock %}
