--- a/azine/user_profiles/templates/user_profiles/password_reset_confirm.html
+++ b/azine/user_profiles/templates/user_profiles/password_reset_confirm.html
@@ -1,15 +1,14 @@
-{% extends "html/base.html" %}
+{% extends "user_profiles/base.html" %}
 {% load i18n %}
 
 {% block breadcrumbs %}<div class="breadcrumbs"><a href="../">{% trans 'Home' %}</a> &rsaquo; {% trans 'Password reset confirmation' %}</div>{% endblock %}
 
 {% block title %}{% trans 'Password reset' %}{% endblock %}
+{% block heading %}{% trans 'Enter new password' %}{% endblock %}
 
 {% block content %}
 
 {% if validlink %}
-
-<h2>{% trans 'Enter new password' %}</h2>
 
 <p>{% trans "Please enter your new password twice so we can verify you typed it in correctly." %}</p>
 
@@ -23,7 +22,7 @@
 
 {% else %}
 
-<h2>{% trans 'Password reset unsuccessful' %}</h2>
+{% block heading %}{% trans 'Password reset unsuccessful' %}{% endblock %}
 
 <p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
 
