--- a/azine/user_profiles/templates/user_profiles/password_reset_form.html
+++ b/azine/user_profiles/templates/user_profiles/password_reset_form.html
@@ -1,14 +1,12 @@
-{% extends "html/base.html" %}
+{% extends "user_profiles/base.html" %}
 {% load i18n %}
 
 {% block breadcrumbs %}<div class="breadcrumbs"><a href="../">{% trans 'Home' %}</a> &rsaquo; {% trans 'Password reset' %}</div>{% endblock %}
 
 {% block title %}{% trans "Password reset" %}{% endblock %}
+{% block heading %}{% trans "Password reset" %}{% endblock %}
 
 {% block content %}
-
-<h2>{% trans "Password reset" %}</h2>
-
 <p>{% trans "Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one." %}</p>
 
 <form action="" method="post">{% csrf_token %}
