--- a/azine/user_profiles/templates/user_profiles/profile/change.html
+++ b/azine/user_profiles/templates/user_profiles/profile/change.html
@@ -3,15 +3,14 @@
 
 {% block title %}
 {{ block.super }}
-Add a job
+{{ request.user.username }} – edit profile
 {% endblock %}
-
-{% block heading %}{% trans "Add new job" %}{% endblock %}
 
 {% block content %}
 <form method="POST" action="">
 	{{ form.as_p }} 
 	{% csrf_token %}
-	<input type="submit" value="{% trans "Add this job" %}" />
-</form> 
+	<input type="submit" value="{% trans "Save" %}" />
+</form>
 {% endblock %}
+
