CSS updates for forms

--- a/azine/media/azine_main/css/my_layout.css
+++ b/azine/media/azine_main/css/my_layout.css
@@ -22,6 +22,7 @@
 
 @import url(screen/basemod.css);
 @import url(screen/content.css);
+@import url(screen/forms.css);
 
 /* import print layout | Druck-Layout einbinden */
 @import url(../yaml/print/print_003_draft.css);
