--- a/azine/azine_main/templates/html/base.html
+++ b/azine/azine_main/templates/html/base.html
@@ -43,7 +43,7 @@
                     <li><a href="#">About</a></li>
                     <li><a href="#">Help</a></li>
                     {% if not request.user.is_anonymous %}
-                    <li><a href="{% url current_user_detail %}">{{ request.user.username }}</a>
+                    <li><a href="{% url current_user_detail %}">{{ request.user.get_profile }}</a>
                         <ul>
                             <li><a href="{% url current_user_profile_change %}">{% trans "Edit your profile" %}</a></li>
                             <li><a href="{% url application_index_for_current_user %}">{% trans "Your applications" %}</a></li>
